
	o compoplot is now a generic with methods for different objects,
	including dapc and snapclust

	o spca is now a generic with methods for genind, data.frame and
	genlight objects

BUG FIXES
	o fixed registration of C routines which could cause problems with
	SNPbin and genlight objects.

	o fixed issues relating to `read.PLINK` and the reading of `.map`
	files (issues 94 and 188)



			CHANGES IN ADEGENET VERSION 2.0.2
BUG FIXES
	o df2genind will now replace "." in alleles with "_" (or "p" if sep = "_")
	see https://github.com/thibautjombart/adegenet/issues/132 for details

	o if several locus names would partially match through grep,
	df2genind would output an incorrect genind object
	NA-wise. Reported by Elizabeth, see
	https://github.com/thibautjombart/adegenet/issues/160

			CHANGES IN ADEGENET VERSION 2.0.1
NEW FEATURES
	o Hs is now much faster and will scale better for large number of
	loci

	o Hs.test allows for testing differences in expected
	heterozygosity between two groups of individuals

	o strata tutorial is now available via
	adegenetTutorial(which="strata")

	o repool can now handle objects with no population information,
	and can return a list of repooled genind (argument 'list'
	defauling to FALSE)

	o read.fstat can now handle missing data coded by any number of
	"0"
	
	o `scatter.dapc` function can now label individuals using `orditorp`
	function from `vegan` package, which takes care of overlapping
	(See issue #100)
	
	o df2genind is now faster at handling missing data (See issue #114)
	
	o the summary method has better formatting

BUG FIXES
	o Hs no longer returns NaN if one locus has not been typed;
	instead, computations are done using all available loci

	o adegenetTutorial now opens up-to-date tutorials

	o subsetting genlight objects now treats missing data appropriately
	when given logical, character, or negative subscripts.
	(See issue #83 (https://github.com/thibautjombart/adegenet/issues/83))
