@@ -989,77 +989,6 @@ predict.dapc <- function(object, newdata, prior = object$prior, dimen,
 
 
 
-############
-## xvalDapc
-############
-
-xvalDapc <- function (x, ...) UseMethod("xvalDapc")
-
-xvalDapc.data.frame <- function(x, grp, n.pca.max, n.da=NULL, training.set = 0.9,
-                                result=c("groupMean","overall"),
-                                center=TRUE, scale=FALSE, n.pca=NULL, n.rep=10, ...){
-
-    ## CHECKS ##
-    grp <- factor(grp)
-    n.pca <- n.pca[n.pca>0]
-    result <- match.arg(result)
-    if(is.null(n.da)) {
-        n.da <- length(levels(grp))-1
-    }
-
-    ## GET TRAINING SET SIZE ##
-    N <- nrow(x)
-    N.training <- round(N*training.set)
-
-    ## GET FULL PCA ##
-    if(missing(n.pca.max)) n.pca.max <- min(dim(x))
-    pcaX <- dudi.pca(x, nf=n.pca.max, scannf=FALSE, center=center, scale=scale)
-    n.pca.max <- min(n.pca.max,pcaX$rank,N.training-1)
-
-    ## DETERMINE N.PCA IF NEEDED ##
-    if(is.null(n.pca)){
-        n.pca <- round(pretty(1:n.pca.max,10))
-    }
-    n.pca <- n.pca[n.pca>0 & n.pca<(N.training-1)]
-
-    ## FUNCTION GETTING THE % OF ACCURATE PREDICTION FOR ONE NUMBER OF PCA PCs ##
-    ## n.pca is a number of retained PCA PCs
-    VOID.GRP <- FALSE # will be TRUE if empty group happened
-    get.prop.pred <- function(n.pca){
-        f1 <- function(){
-            toKeep <- sample(1:N, N.training)
-            if(!(all(table(grp[toKeep])>0) & all(table(grp[-toKeep])>0))) VOID.GRP <<- TRUE
-            temp.pca <- pcaX
-            temp.pca$li <- temp.pca$li[toKeep,,drop=FALSE]
-            temp.dapc <- suppressWarnings(dapc(x[toKeep,,drop=FALSE], grp[toKeep], n.pca=n.pca, n.da=n.da, dudi=temp.pca))
-            temp.pred <- predict.dapc(temp.dapc, newdata=x[-toKeep,,drop=FALSE])
-            if(result=="overall"){
-                out <- mean(temp.pred$assign==grp[-toKeep])
-            }
-            if(result=="groupMean"){
-                out <- mean(tapply(temp.pred$assign==grp[-toKeep], grp[-toKeep], mean), na.rm=TRUE)
-            }
-            return(out)
-        }
-        return(replicate(n.rep, f1()))
-    }
-
-
-    ## GET %SUCCESSFUL OF ACCURATE PREDICTION FOR ALL VALUES ##
-    res.all <- unlist(lapply(n.pca, get.prop.pred))
-    if(VOID.GRP) warning("At least one group was absent from the training / validating sets.\nTry using smaller training sets.")
-    res <- data.frame(n.pca=rep(n.pca, each=n.rep), success=res.all)
-    return(res)
-} # end xvalDapc.data.frame
-
-
-xvalDapc.matrix <- xvalDapc.data.frame
-
-
-
-
-
-
 ## #############
 ## ## discriVal
 ## #############
